--- a/wellnesshub/src/app/globals.css
+++ b/wellnesshub/src/app/globals.css
@@ -1,11 +1,11 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #deceae;
   --foreground: #171717;
 }
 
-@theme inline {
+@theme inline{
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
