--- a/wellnesshub/src/app/globals.css
+++ b/wellnesshub/src/app/globals.css
@@ -2,13 +2,14 @@
 
 :root {
   --background: #deceae;
-  --foreground: #171717;
+  --foreground: #4f4440;
+  --font-pixelify: "Pixelify Sans", cursive; 
 }
 
 @theme inline{
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-pixelify);
   --font-mono: var(--font-geist-mono);
 }
 
@@ -17,5 +18,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Pixelify Sans", Arial, Helvetica, sans-serif;
 }
